--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="card p-3 h-100">
             <div class="card">
               <h5 class="card-title">💻 Programming</h5>
-              <h5 class="card-text">I have experience in Java.</h5>
+              <h5 class="card-text">I have experience in Java and self-taught knowledge of C and C++.</h5>
             </div>
           </div>
         </div>
