--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container py-5">
     <header class="text-center mb-5">
       <h1 class="fw-bold">Daniel Gayoso</h1>
-      <p class="text-muted">Developer · Cybersecurity</p>
+      <p class="text-muted">Software Developer · Cybersecurity</p>
       <a href="https://github.com/daniel-gf05" target="_blank" class="btn btn-custom">GitHub</a>
       <a href="https://www.linkedin.com/in/daniel-gayoso-968745273/" target="_blank" class="btn btn-custom">Linkedin</a>
     </header>
@@ -60,6 +60,14 @@
             <h5 class="card-title">NetworkAnalyzer (C/C++)</h5>
             <p class="card-text">[Self-taught] A simple C++ application to analyze traffic in a local network.</p>
             <a href="https://github.com/daniel-gf05/NetworkAnalyzer" target="_blank">Ver en GitHub →</a>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card p-3 h-100">
+            <h5 class="card-title">TO-DO List API (Java/SpringBoot)</h5>
+            <p class="card-text">[Self-taught] A simple TO-DO List API with basic CRUD functions.</p>
+            <a href="https://github.com/daniel-gf05/TODO-API" target="_blank">Ver en GitHub →</a>
           </div>
         </div>
 
@@ -136,7 +144,10 @@
 
   </div>
 
-  <h1 class="text-center">UNDER CONSTRUCTION</h1>
+  <div class="ucon">
+    <h1 class="text-center">UNDER CONSTRUCTION</h1>
+    
+  </div>
 
 </body>
 
