--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="card p-3 h-100">
             <h5 class="card-title">TO-DO List (C/C++)</h5>
             <p class="card-text">[Self-taught] Tasks management personal project in C++.</p>
-            <a href="https://github.com/daniel-gf05/TO-DO-List" target="_blank">Ver en GitHub →</a>
+            <a href="https://github.com/daniel-gf05/TO-DO-List" target="_blank">View on GitHub →</a>
           </div>
         </div>
 
@@ -35,7 +35,7 @@
           <div class="card p-3 h-100">
             <h5 class="card-title">API Robots (Java/SpringBoot)</h5>
             <p class="card-text">[Degree] API RESTful with MongoDB for robots and quests management.</p>
-            <a href="https://github.com/daniel-gf05/RobotArmy" target="_blank">Ver en GitHub →</a>
+            <a href="https://github.com/daniel-gf05/RobotArmy" target="_blank">View on GitHub →</a>
           </div>
         </div>
         
@@ -43,7 +43,7 @@
           <div class="card p-3 h-100">
             <h5 class="card-title">MeasuresApp (Java/SpringBoot)</h5>
             <p class="card-text">[Degree] A simple SpringBoot application that receives measurements from an Arduino device and stores them in a database.</p>
-            <a href="https://github.com/daniel-gf05/MeasuresApp" target="_blank">Ver en GitHub →</a>
+            <a href="https://github.com/daniel-gf05/MeasuresApp" target="_blank">View on GitHub →</a>
           </div>
         </div>
 
@@ -51,7 +51,7 @@
           <div class="card p-3 h-100">
             <h5 class="card-title">Swing (Java/Swing)</h5>
             <p class="card-text">[Degree] A simple marks manager application developed using Java Swing.</p>
-            <a href="https://github.com/daniel-gf05/Swing" target="_blank">Ver en GitHub →</a>
+            <a href="https://github.com/daniel-gf05/Swing" target="_blank">View on GitHub →</a>
           </div>
         </div>
         
@@ -59,7 +59,7 @@
           <div class="card p-3 h-100">
             <h5 class="card-title">NetworkAnalyzer (C/C++)</h5>
             <p class="card-text">[Self-taught] A simple C++ application to analyze traffic in a local network.</p>
-            <a href="https://github.com/daniel-gf05/NetworkAnalyzer" target="_blank">Ver en GitHub →</a>
+            <a href="https://github.com/daniel-gf05/NetworkAnalyzer" target="_blank">View on GitHub →</a>
           </div>
         </div>
 
@@ -67,7 +67,7 @@
           <div class="card p-3 h-100">
             <h5 class="card-title">TO-DO List API (Java/SpringBoot)</h5>
             <p class="card-text">[Self-taught] A simple TO-DO List API with basic CRUD functions.</p>
-            <a href="https://github.com/daniel-gf05/TODO-API" target="_blank">Ver en GitHub →</a>
+            <a href="https://github.com/daniel-gf05/TODO-API" target="_blank">View on GitHub →</a>
           </div>
         </div>
 
@@ -87,7 +87,7 @@
           <div class="card p-3 h-100">
             <div class="card">
               <h5 class="card-title">💻 Programming</h5>
-              <h5 class="card-text">I have experience in Java and self-taught knowledge of C and C++.</h5>
+              <h5 class="card-text">I have acquired knowledge of technologies such as SpringBoot, Astro, and Vite through my academic studies. Additionally, I have studied Java, Python, JavaScript, and Kotlin, and I have self-taught knowledge of C and C++.</h5>
             </div>
           </div>
         </div>
